kube/services/netpolicy/networkpolicy_hatchery_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-hatchery
spec:
  podSelector:
    matchLabels:
      app: hatchery
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: hatchery
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: hatchery
      - ipBlock:
           cidr: 54.224.0.0/12
      - ipBlock:
           cidr: 52.92.16.0/20
      - ipBlock:
           cidr: 0.0.0.0/0
  policyTypes:
   - Ingress
   - Egress
